<resources>
    <string name="app_name">Unit Converter</string>

    <string name="input_hint">Enter value</string>
    <string name="convert">Convert</string>
    <string name="result_label">Converted value will appear here</string>
    <string name="label_conversion_type">Conversion Type</string>
    <string name="label_source_unit">Source Unit</string>
    <string name="label_destination_unit">Destination Unit</string>

    <string-array name="conversion_types">
        <item>Length</item>
        <item>Weight</item>
        <item>Temperature</item>
    </string-array>

    <string-array name="length_units">
        <item>Inch</item>
        <item>Foot</item>
        <item>Yard</item>
        <item>Mile</item>
        <item>Centimeter</item>
        <item>Kilometer</item>
    </string-array>

    <string-array name="weight_units">
        <item>Pound</item>
        <item>Ounce</item>
        <item>Ton</item>
        <item>Gram</item>
        <item>Kilogram</item>
    </string-array>

    <string-array name="temperature_units">
        <item>Celsius</item>
        <item>Fahrenheit</item>
        <item>Kelvin</item>
    </string-array>
</resources>